PR Review feedback and cleanup for Bug 1182225 Includes the follow changes: - Remove redundant JS include - Don't use custom page title for Dev edition - Make URL locale-independent - Whitespace cleanup - Remove unused 'blank' body CSS classes - Remove dead-spot in menu hover - Keep 'Developer Edition' terms on dev-ed notes - Remove copy-pasta JS comments - Hide All Downloads link for mobile - Indenting clean-up - Use consistent quotes and :before syntax - Use .background-size() mixin - Use heading tag rather than paragraph - Use lower-case for tag IDs - Use @baseLine variable - Move section IDs up to section tag - Use <nav> tag for nav element - Move ID for #Known section - Fix out-of-date tag headline tags for mobile - Use h4 for tag section headers - Make tabzilla text legible on light background - Use nav element for nav elements - Use more appropriate heading levels - Remove hard-coded en-US local code in feedback URL - Use @baseLine LESS var where appropriate - Drop unit from 0 CSS values - Use @baseLine LESS var where appropriate - Improve heading levels for Dev Edition template - Use bedrock URL helps for all but iOS notes

--- a/bedrock/firefox/templates/firefox/releases/beta-notes.html
+++ b/bedrock/firefox/templates/firefox/releases/beta-notes.html
@@ -4,31 +4,27 @@
 
 {% extends "firefox/releases/release-notes.html" %}
 
-{% block js %}
-   {% javascript 'releasenotes' %}
-{% endblock %}
-
 {% set channel_name = 'Beta' %}
 
 {% block platform_switch %}
-  <div id="nav" class="navigator">
+  <nav id="nav" class="navigator">
     <div class="container">
       <ul class="menu">
-        <li><a href="{{ url('firefox') + 'notes/' }}">{{ _('Desktop') }}</a></li>
-        <li><a href="{{ url('firefox') + 'android/notes/' }}">{{ _('Android') }}</a></li>
+        <li><a href="{{ url('firefox.notes') }}">{{ _('Desktop') }}</a></li>
+        <li><a href="{{ url('firefox.notes', platform='android') }}">{{ _('Android') }}</a></li>
         <li><a href="{{ url('firefox') + 'ios/1.1/releasenotes/' }}">{{ _('iOS') }}</a></li>
         <li class="current submenu-title">
           <a>{{ _('Other Releases') }}</a>
           <ul class="submenu">
             <li class="title">{{ _('Recent Desktop Releases') }}</li>
-            <li><a href="{{ url('firefox') + 'aurora/notes/' }}">{{ _('Latest Developer Edition') }}</a></li>
-            <li><a href="{{ url('firefox') + 'beta/notes/' }}">{{ _('Latest Beta') }}</a></li>
+            <li><a href="{{ url('firefox.notes', channel='developer') }}">{{ _('Latest Developer Edition') }}</a></li>
+            <li><a href="{{ url('firefox.notes', channel='beta') }}">{{ _('Latest Beta') }}</a></li>
             <li class="title">{{ _('Recent Android Releases') }}</a></li>
-            <li><a href="{{ url('firefox') + 'android/beta/notes/' }}">{{ _('Latest Beta') }}</a></li>
-            <li><a href="{{ url('firefox') + 'android/aurora/notes/' }}">{{ _('Latest Aurora') }}</a></li>
+            <li><a href="{{ url('firefox.notes', platform='android', channel='beta') }}">{{ _('Latest Beta') }}</a></li>
+            <li><a href="{{ url('firefox.notes', platform='android', channel='aurora') }}">{{ _('Latest Aurora') }}</a></li>
           </ul>
         </li>
       </ul>
     </div>
-  </div>
+  </nav>
 {% endblock %}
