--- a/bedrock/firefox/templates/firefox/os/_get_device.html
+++ b/bedrock/firefox/templates/firefox/os/_get_device.html
@@ -151,6 +151,7 @@
           <ul>
             <li><a class="movistar" href="http://catalogo.movistar.com.pe/alcatel-ot-4019-fire-c">Alcatel One Touch Fire C</a></li>
             <li><a class="movistar" href="http://catalogo.movistar.com.pe/zte-open-2">ZTE Open II</a></li>
+            <li><a class="movistar" href="http://www.movistar.com.pe/movil/zte-open-c2-promo">ZTE Open C2</a></li>
           </ul>
         </div>
         <div class="provider" data-country="ro">
