--- a/bedrock/firefox/templates/firefox/os/devices.html
+++ b/bedrock/firefox/templates/firefox/os/devices.html
@@ -2262,6 +2262,15 @@
               </div>
             </a>
           </li>
+          <li class="last">
+            <a href="#zte_openc2" class="device-thumbnail">
+              <img src="{{ static('img/firefox/os/devices/smartphones/zte-openc2-thumb.png') }}" alt="">
+              <span class="device-name">{{ _('ZTE Open C2') }}</span>
+              <div class="availability-notice">
+                <span class="is-available">{{ _('Available') }}</span>
+              </div>
+            </a>
+          </li>
         </ul>
       </div>
 
@@ -2586,6 +2595,133 @@
             </div>{#--/.pager-content--#}
           </div>{#--/.container--#}
         </section>{#--/#spice_fireonemifx2--#}
+
+        <section class="device-detail smartphone-detail" id="zte_openc2">
+          <div id="zte_openc2-pager" class="container pager pager-with-tabs pager-no-history">
+            <header class="device-detail-header">
+              <h3 class="device-title">{{ _('ZTE Open C2') }}</h3>
+
+              <ul class="pager-tabs">
+                <li><a href="#p1" data-label="Features">{{_('Features')}}</a></li>
+                <li><a href="#p2" data-label="Specifications">{{_('Specifications')}}</a></li>
+              </ul>
+
+              <button class="device-detail-close">{{ _('Close') }}</button>
+            </header>
+
+            <div class="pager-content">
+              <div class="device-details features pager-page default-page" id="zte_openc2-features">
+                <div class="feature-group logo-colors">
+                </div>
+
+                <div class="feature-group image">
+                  <img src="{{ static('img/firefox/os/devices/smartphones/zte-openc2.png') }}" alt="{{ _('ZTE Open C2') }}">
+                </div>
+
+                <div class="feature-group stats">
+                  <ul>
+                    <li class="stat-screen">
+                      <strong>{{ _('4.0" WVGA') }}</strong>
+                      {{ _('480 x 800 pixels') }}
+                    </li>
+                    <li class="stat-camera">
+                      <strong>{{ _('2.0 MP') }}</strong>
+                      {{ _('Rear camera') }}
+                    </li>
+                    <li class="stat-storage">
+                      <strong>{{ _('4 GB RAM') }}</strong>
+                      {{ _('Internal memory') }} *
+                    </li>
+                  </ul>
+
+                  <small>* {{ memory_disclaimer }}</small>
+                </div>
+
+                <div class="feature-group availability">
+                  <h5>{{ _('Available in') }}</h5>
+
+                  <ul class="comma-list">
+                    <li>{{ _('Peru') }}</li>
+                  </ul>
+                </div>
+              </div>{#--/.features--#}
+              <div class="device-details specifications pager-page" id="zte_openc2-specifications">
+                <h4 class="device-details-title">{{ _('Specifications') }}</h4>
+
+                <table>
+                  <tr>
+                    <th>{{ _('Screen') }}</th>
+                    <td>
+                      {{ _('4.0" WVGA') }}
+                    </td>
+                  </tr>
+                  <tr>
+                    <th>{{ _('Camera') }}</th>
+                    <td>
+                      {{ _('2.0 MP') }}
+                    </td>
+                  </tr>
+                  <tr>
+                    <th>{{ _('Processor') }}</th>
+                    <td>
+                      {{ _('Spreadtrum SC7715 1.0 GHz') }}
+                    </td>
+                  </tr>
+                  <tr>
+                    <th>{{ _('Memory') }}</th>
+                    <td>
+                      <dl>
+                        <dt>{{ _('ROM') }} *</dt>
+                        <dd>{{ _('4 GB') }}</dd>
+
+                        <dt>{{ _('RAM') }}</dt>
+                        <dd>{{ _('512 MB') }}</dd>
+
+                        <dt>{{ _('Expansion slot') }}</dt>
+                        <dd>{{ _('MicroSD up to 32 GB') }}</dd>
+                      </dl>
+
+                      <small>* {{ memory_disclaimer }}</small>
+                    </td>
+                  </tr>
+                  <tr>
+                    <th>{{ _('GPS') }}</th>
+                    <td>{{ _('Yes') }}</td>
+                  </tr>
+                  <tr>
+                    <th>{{ _('Battery') }}</th>
+                    <td>
+                      <dl>
+                        <dt>{{ _('Capacity') }}</dt>
+                        <dd>{{ _('1400 mAh') }}</dd>
+                      </dl>
+                    </td>
+                  </tr>
+                  <tr>
+                    <th>{{ _('Wireless') }}</th>
+                    <td>
+                      {{ _('Bluetooth v2.0 + EDR') }}
+                      <br>
+                      {{ _('Wi-Fi 802.11 b/g/n') }}
+                    </td>
+                  </tr>
+                  <tr>
+                    <th>{{ _('Ports') }}</th>
+                    <td>
+                      {{ _('Micro USB 2.0 high speed') }}
+                    </td>
+                  </tr>
+                  <tr>
+                    <th>{{ _('Radio') }}</th>
+                    <td>
+                      {{ _('Stereo FM') }}
+                    </td>
+                  </tr>
+                </table>
+              </div>{#--/.specifications--#}
+            </div>{#--/.pager-content--#}
+          </div>{#--/.container--#}
+        </section>{#--/#zte_openc2--#}
       </div>{#--/.device-detail-list--#}
     </section>{#--/#smartphones--#}
 
