--- a/bedrock/firefox/templates/firefox/new.html
+++ b/bedrock/firefox/templates/firefox/new.html
@@ -25,7 +25,7 @@
 
 {% block body_id %}firefox-new{% endblock %}
 
-{% block body_class %}{{ super() }}{% if l10n_has_tag('firefox_new_mobile_promo') and waffle.switch('firefox-ios-global') %} scene2-mobile-promo{% endif %}{% endblock %}
+{% block body_class %}{{ super() }}{% if l10n_has_tag('firefox_new_mobile_promo') %} scene2-mobile-promo{% endif %}{% endblock %}
 
 {% block site_header_nav %}{% endblock %}
 {% block site_header_logo %}
@@ -50,12 +50,6 @@
   {% endif %}
 {% endblock %}
 
-{% block js_pretrack %}
-{% if not waffle.switch('firefox-ios-global') %}
-  {% javascript 'firefox_new_ios_redirect' %}
-{% endif %}
-{% endblock %}
-
 {% block optimizely %}
   {# do not load optimizely for variants 3 and 4 #}
   {% if variant not in ['3', '4'] %}
@@ -66,7 +60,7 @@
 {% endblock %}
 
 {% block string_data %}
-  {% if l10n_has_tag('firefox_new_mobile_promo') and waffle.switch('firefox-ios-global') %}
+  {% if l10n_has_tag('firefox_new_mobile_promo') %}
     data-scene2-promo-headline="{{ _('Get Firefox everywhere') }}"
   {% endif %}
 {% endblock %}
@@ -133,18 +127,16 @@
         <div class="android download-button-wrapper" data-upgrade-subtitle="{{_('Get it free on Google Play')}}">
           {{ download_firefox(platform='android', small=True, icon=False, dom_id='download-button-android') }}
         </div>
-        {% if waffle.switch('firefox-ios-global') %}
         <div class="ios download-button-wrapper">
           {{ download_firefox(platform='ios', small=True, icon=False, dom_id='download-button-ios') }}
         </div>
-        {% endif %}
         <div class="desktop-latest-links-wrapper latest-links-wrapper">
           <ul>
             <li class="hide-for-refresh"><a href="{{ url('firefox.desktop.index') }}">{{_('Learn more about Firefox for desktop')}}</a></li>
             <li><a href="https://support.mozilla.org/products/firefox?utm_source=mozilla.org&amp;utm_medium=referral&amp;utm_campaign=need-help-link">{{_('Need help?')}}</a></li>
             {% if l10n_has_tag('mobile_links') %}
             <li class="hide-for-refresh"><a href="{{settings.GOOGLE_PLAY_FIREFOX_LINK }}">{{_('Get Firefox on your Android device')}}</a></li>
-            {% if l10n_has_tag('firefox_ios') and waffle.switch('firefox-ios-global') %}
+            {% if l10n_has_tag('firefox_ios') %}
             <li class="hide-for-refresh"><a href="{{ firefox_ios_url('mozorg-uptodate-appstore-link') }}">{{ _('Add Firefox to your iPhone, iPad and iPod touch') }}</a></li>
             {% endif %}
             <li class="hide-for-refresh"><a href="{{ url('firefox.os.index') }}">{{_('Learn about Firefox OS')}}</a></li>
@@ -175,7 +167,7 @@
     </div>{#-- /#scene1-main --#}
 
     <div id="scene2-main" class="scene-content scene2 hidden">
-    {% if l10n_has_tag('firefox_new_mobile_promo') and waffle.switch('firefox-ios-global') %}
+    {% if l10n_has_tag('firefox_new_mobile_promo') %}
       <p class="help">
         {{_('Your download should begin automatically. If not, <a id="%s" href="">click here</a>. It could take a few minutes, but it’s worth the wait.')|format('direct-download-link')}}
         <a rel="external" href="https://support.mozilla.org/products/firefox?utm_source=mozilla.org&amp;utm_medium=referral&amp;utm_campaign=need-help-link">{{_('Need help?')}}</a>
